Fixes broken layout of posts on homepage on mobile

--- a/src/components/homepage.module.css
+++ b/src/components/homepage.module.css
@@ -74,12 +74,18 @@
 .cardCont {
   align-items: grid-start;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 373px);
+  grid-template-columns: repeat(auto-fill, 280px);
   grid-gap: 30px;
   flex-shrink: 2;
   justify-content: center;
   max-width: 1525px;
   width: 100%;
+}
+
+@media only screen and (min-width: 414px) {
+  .cardCont {
+    grid-template-columns: repeat(auto-fill, 373px);
+  }
 }
 
 @media only screen and (min-width: 768px) {
